switch to upstream react-native-keychain

--- a/packages/wallet-stack/package.json
+++ b/packages/wallet-stack/package.json
@@ -62,7 +62,6 @@
   "peerDependencies": {
     "@divvi/cookies": "^6.2.3",
     "@divvi/react-native-fs": "^2.20.1",
-    "@divvi/react-native-keychain": "^10.0.0-divvi.1",
     "@google-cloud/recaptcha-enterprise-react-native": "^18.8.0",
     "@interaxyz/react-native-webview": "^13.13.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -164,6 +163,7 @@
     "react-async-hook": "^4.0.0",
     "react-i18next": "^15.4.1",
     "react-native-android-open-settings": "^1.3.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-platform-touchable": "^1.1.1",
