--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -21,9 +21,7 @@
   },
   "dependencies": {
     "@divvi/cookies": "^6.2.3",
-    "wallet-stack": "*",
     "@divvi/react-native-fs": "^2.20.1",
-    "@divvi/react-native-keychain": "^10.0.0-divvi.1",
     "@google-cloud/recaptcha-enterprise-react-native": "^18.8.0",
     "@interaxyz/react-native-webview": "^13.13.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -68,6 +66,7 @@
     "react-native-gesture-handler": "^2.23.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-in-app-review": "^4.3.3",
+    "react-native-keychain": "^10.0.0",
     "react-native-launch-arguments": "^4.0.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.3.0",
@@ -82,7 +81,8 @@
     "react-native-share": "^11.1.0",
     "react-native-simple-toast": "^3.3.2",
     "react-native-svg": "^15.7.1",
-    "react-native-video": "^6.16.1"
+    "react-native-video": "^6.16.1",
+    "wallet-stack": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
