--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-native-gesture-handler": "^2.23.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-in-app-review": "^4.3.3",
+    "react-native-keychain": "^10.0.0",
     "react-native-launch-arguments": "^4.0.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.3.0",
